# Auto-Grader

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PREFERENCES.md  PROJECT.md  ROADMAP.md
.gsd/phases/01-m001-vd10ls-lti-1-3-assignment-rendering/: 01-01-PLAN.md  01-01-SUMMARY.md  01-01-UAT.md  01-02-PLAN.md  01-02-SUMMARY.md  01-02-UAT.md  01-03-PLAN.md  01-03-SUMMARY.md  01-03-UAT.md  01-04-PLAN.md  01-04-SUMMARY.md  01-04-UAT.md  01-05-PLAN.md  01-05-SUMMARY.md  01-05-UAT.md  01-06-PLAN.md  01-06-SUMMARY.md  01-06-UAT.md  01-AUDIT.md  01-CONTEXT.md  (+1 more)
Assignments/: Lab01_Report.docx  Lab08_Pre-lab.docx
alembic/versions/: 4eca25300999_initial_schema.py  b7d41f08c2a9_add_grade_passbacks.py  cf9a7b132d0e_checkpoint_state_uniqueness.py
answer_keys/: lab01.json  lab08.json
app/: config.py  database.py  launch_context.py  main.py
app/grading/: checkpoints.py  engine.py  numerical.py  tables.py
app/models/: __init__.py  answer_key.py  checkpoint.py  passback.py  submission.py  user.py
app/routers/: dev.py  grading.py  lti.py  ta.py
app/services/: ags.py
app/templates/: _ta_row.html  assignment.html  base.html  error.html  results.html  ta_dashboard.html  ta_submissions.html
docs/: M1-CONTEXT.md  PROJECT-OVERVIEW.md  S01-COMPLETION.md  S02-COMPLETION.md
tests/: test_ags.py  test_assignment_binding.py  test_checkpoint_persistence.py  test_checkpoints.py  test_grading.py  test_grading_progress.py  test_lab08.py  test_passback_attempts.py  test_passback_serialization.py
